applications/kubernetes/external-routes/immich/endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: immich
subsets:
- addresses:
  - ip: 10.10.20.11
  ports:
  - port: 2283
