applications/kubernetes/external-routes/immich/service.yml
apiVersion: v1
kind: Service
metadata:
  name: immich
spec:
  ports:
  - protocol: TCP
    port: 2283
    targetPort: 2283
